[tool.black]
line-length = 120
exclude = '''
seal5/frontends/coredsl2_seal5/parser_gen
'''

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "seal5"
# dynamic = ["version", "dependencies", "optional-dependencies"]
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {dev = { file = ["requirements_dev.txt"] }}

[project.scripts]
seal5 = "seal5.cli.main:main"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["seal5"]
